--- a/index.html
+++ b/index.html
@@ -20,7 +20,91 @@
           </div>
         </div>
       </div>
-      <div class="rightSide">hi</div>
+      <div class="rightSide">
+        <div class="top-text">
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams. Sign up
+          <span>now</span> to get started.
+
+          <div class="mid-text">You <span>know</span> you want to.</div>
+        </div>
+        <div class="form">
+          <form action="example.com/path">
+            <div class="left-form">
+              <div class="form-header">Let's do this!</div>
+
+              <div class="first-name input-container">
+                <label for="first_name">FIRST NAME</label>
+                <input
+                  type="text"
+                  id="first_name"
+                  name="first_name"
+                  class="first-name-input input"
+                />
+              </div>
+              <div class="email input-container">
+                <label for="email">EMAIL</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="email-input input"
+                />
+              </div>
+              <div class="password input-container">
+                <label for="password ">PASSWORD</label>
+                <input
+                  type="password "
+                  id="password "
+                  name="password "
+                  class="password-input input"
+                />
+              </div>
+            </div>
+            <div class="right-form">
+              <div class="form-header right-header"></div>
+
+              <div class="last-name input-container">
+                <label for="last_name">LAST NAME</label>
+                <input
+                  type="text"
+                  id="last_name"
+                  name="last_name"
+                  class="last-name-input input"
+                />
+              </div>
+              <div class="email input-container">
+                <label for="phone-number">PHONE NUMBER</label>
+                <input
+                  type="tel"
+                  id="phone-number"
+                  name="phone-number"
+                  class="phone-number-input input"
+                />
+              </div>
+              <div class="confirm-password input-container">
+                <label for="password ">PASSWORD</label>
+                <input
+                  type="password "
+                  id="confirm-password "
+                  name="confirm-password "
+                  class="confirm-password-input input"
+                />
+              </div>
+            </div>
+          </form>
+        </div>
+        <!--ContainerBelow Form-->
+        <div class="bottom-container">
+          <div class="button"><button>Create Account</button></div>
+          <div class="login">
+            <div>Already have an account?</div>
+            <a href="https://www." style="color: #596d48" target="_blank">
+              Log In</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
